--- a/package.json
+++ b/package.json
@@ -10,15 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.7.9",
-    "i18next": "^24.2.0",
-    "i18next-browser-languagedetector": "^8.0.2",
-    "i18next-http-backend": "^3.0.1",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.3.1",
-    "react-i18next": "^15.2.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^7.1.1",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "sweetalert2": "^11.15.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
