--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "i18next": "^24.2.0",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.4.0",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^7.1.1",
     "styled-components": "^6.1.13",
